# AutoVMware-Kimi-Ops-Runbook

./: .gitignore  README.md  install.ps1  pyproject.toml
docs/reports/dem009/: first-batch-clone-evidence.md
scripts/bootstrap/: windows-init-autovmware-kimi.ps1
scripts/release/: build-release.ps1
skills/autovmware-macos-vmx-clone/: SKILL.md  contract.yaml
skills/autovmware-macos-vmx-clone/config/: defaults.json
skills/autovmware-macos-vmx-clone/scripts/: cli.py  schema.py  validation.py
tests/: test_autovmware_macos_clone_skill.py  test_release_scripts.py
